name:                hrf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vitold/hrf#readme
license:             BSD3
license-file:        LICENSE
author:              Viktor Kocherga
maintainer:          jahalive@gmail.com
copyright:           2018 Viktor Kocherga
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , stm
                     , fsnotify

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vitold/hrf
